# BuildToolsGUI

./: .gitignore  CMakeLists.txt  README.md
glade/: main.glade
src/: build.c  build.h  download.c  download.h  main.c  main.h
